--- a/skills.html
+++ b/skills.html
@@ -14,6 +14,7 @@
         <li class="name">DSheraZ</li>
         <li><a href="index.html">Home</a></li>
         <li><a href="experience.html">Experience</a></li>
+        <li><a href="skills.html">Skills</a></li>
       </ul>
     </div>
 
